--- a/Pages/contact.html
+++ b/Pages/contact.html
@@ -54,6 +54,7 @@
         <div class="container-fluid">
           <a class="navbar-brand" alt="Landing-Page" href="../index.html">
             <img
+            loading="lazy"
               style="height: 50px"
               src="../Assets/Media/MerLogoB.webp"
               alt="logo"
@@ -155,6 +156,7 @@
                         >
                           <span>Submit</span
                           ><img
+                          loading="lazy"
                             src="https://i.cloudup.com/2ZAX3hVsBE-3000x3000.png"
                             height="32"
                             width="32"
@@ -215,6 +217,7 @@
         <div class="row justify-content-center">
           <div class="col-3 col-sm-3 col-md-3 col-lg-3">
             <img
+            loading="lazy"
               class="align-self-center"
               src="../Assets/Media/MercyFooter.webp"
               alt=""
