--- a/Pages/gallery.html
+++ b/Pages/gallery.html
@@ -50,6 +50,7 @@
         <div class="container-fluid">
           <a class="navbar-brand" alt="Landing-Page" href="../index.html">
             <img
+            loading="lazy"
               style="height: 50px"
               src="../Assets/Media/MerLogoB.webp"
               alt="logo"
@@ -118,6 +119,7 @@
         <div class="row justify-content-center">
           <div class="col-3 col-sm-3 col-md-3 col-lg-3">
             <img
+            loading="lazy"
               class="align-self-center"
               src="../Assets/Media/MercyFooter.webp"
               alt="Logo"
