--- a/Pages/travel.html
+++ b/Pages/travel.html
@@ -122,6 +122,7 @@
               <!-- Preview image figure-->
               <figure class="mb-4">
                 <img
+                loading="lazy"
                   class="img-fluid rounded"
                   src="../Assets/Media/pexels-julius-silver-753337.webp"
                   alt="Prague"
@@ -156,6 +157,7 @@
                 </p>
                 <h2 class="fw-bolder mb-5 mt-5">Highlights of Prague</h2>
                 <img
+                loading="lazy"
                 class="img-fluid rounded pb-4 mx-auto d-block"
                 src="../Assets/Media/pexels-jeffrey-czum-2346216.webp"
                 alt="Prague"/>
@@ -180,6 +182,7 @@
                 <div class="card-header">Comments</div>
                 <div class="flex-shrink-0 pt-4 pb-2">
                   <img
+                  loading="lazy"
                     class="rounded-circle"
                     src="../Assets/Media/user.png"
                     alt="Commenter"
@@ -247,6 +250,7 @@
               <div class="card-header">Daily Photo</div>
               <div class="card-body">
                 <img
+                loading="lazy"
                   class="img-fluid rounded mx-auto d-block"
                   src="../Assets/Media/pexels-son-tung-tran-6478474.webp"
                   alt="Prague boat"
