--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <title>Mercy Mo</title>
     <!-- Icon for pages -->
     <link
-    alt="logo"
+      alt="logo"
       rel="shortcut icon"
       href="./Assets/Media/Mercy.webp"
       type="image/x-icon"
@@ -55,6 +55,7 @@
               style="height: 50px"
               src="./Assets/Media/MerLogoB.webp"
               alt="logo"
+              loading="lazy"
             />
           </a>
           <button
@@ -71,19 +72,29 @@
           <div class="collapse navbar-collapse" id="collapsibleNavbar">
             <ul class="navbar-nav">
               <li class="nav-item">
-                <a alt="Landing-Page" class="nav-link" href="./index.html">Home</a>
+                <a alt="Landing-Page" class="nav-link" href="./index.html"
+                  >Home</a
+                >
               </li>
               <li class="nav-item">
-                <a alt="About-me" class="nav-link" href="./Pages/About.html">About me</a>
+                <a alt="About-me" class="nav-link" href="./Pages/About.html"
+                  >About me</a
+                >
               </li>
               <li class="nav-item">
-                <a alt="Travel-tips" class="nav-link" href="./Pages/travel.html">Travel Tips</a>
+                <a alt="Travel-tips" class="nav-link" href="./Pages/travel.html"
+                  >Travel Tips</a
+                >
               </li>
               <li class="nav-item">
-                <a alt="Gallery" class="nav-link" href="./Pages/gallery.html">Gallery</a>
+                <a alt="Gallery" class="nav-link" href="./Pages/gallery.html"
+                  >Gallery</a
+                >
               </li>
               <li class="nav-item">
-                <a alt="Contact-me" class="nav-link" href="./Pages/contact.html">Contact me</a>
+                <a alt="Contact-me" class="nav-link" href="./Pages/contact.html"
+                  >Contact me</a
+                >
               </li>
             </ul>
           </div>
@@ -111,13 +122,23 @@
                 <a alt="About-me" href="./Pages/About.html">MY STORY</a>
               </div>
               <div class="col-md-4 col-sm-12">
-                <img alt="Pozos-Azules" src="./Assets/Media/zen.webp" class="banner-img" />
+                <img
+                  alt="Pozos-Azules"
+                  src="./Assets/Media/zen.webp"
+                  class="banner-img"
+                  loading="lazy"
+                />
               </div>
             </div>
           </div>
         </div>
         <span class="svg-wave">
-          <img class="svg-hero" src="./Assets/Media/wave.svg" alt="wave" />
+          <img
+            class="svg-hero"
+            src="./Assets/Media/wave.svg"
+            alt="wave"
+            loading="lazy"
+          />
         </span>
       </section>
       <!-------Banner End------->
@@ -133,7 +154,8 @@
           </div>
           <div class="about-content">
             <img
-            alt="Mercy's-memoji"
+              loading="lazy"
+              alt="Mercy's-memoji"
               src="./Assets/Media/Mercy.webp"
               class="profile-img about-section1--img"
             />
@@ -151,7 +173,9 @@
       <section class="travel prelative text-center" id="tips">
         <div class="section-padding video-overlay">
           <div class="sectioner-header text-center">
-            <h2 id="travel"><a alt="Travel-tips" href="./Pages/travel.html">Travel Tips</a></h2>
+            <h2 id="travel">
+              <a alt="Travel-tips" href="./Pages/travel.html">Travel Tips</a>
+            </h2>
             <span class="line"></span>
           </div>
           <div class="container pt-2">
@@ -165,10 +189,18 @@
                   muted
                 ></video>
               </a>
-              <a id="sec2-travel-title-tip1" alt="Travel-tips" href="./Pages/travel.html">
+              <a
+                id="sec2-travel-title-tip1"
+                alt="Travel-tips"
+                href="./Pages/travel.html"
+              >
                 <h1>Prague</h1>
               </a>
-              <a id="sec2-travel-text-tip1" alt="Travel-tips" href="./Pages/travel.html">
+              <a
+                id="sec2-travel-text-tip1"
+                alt="Travel-tips"
+                href="./Pages/travel.html"
+              >
                 <p>
                   Where history whispers through every charming street corner.
                   🏰🇨🇿 #PragueMagic
@@ -184,10 +216,18 @@
                   muted
                 ></video
               ></a>
-              <a id="sec2-travel-title-tip2" alt="Travel-tips" href="./Pages/travel.html">
+              <a
+                id="sec2-travel-title-tip2"
+                alt="Travel-tips"
+                href="./Pages/travel.html"
+              >
                 <h1 class="sec2-travel-response2">Venice</h1>
               </a>
-              <a id="sec2-travel-text-tip2" alt="Travel-tips" href="./Pages/travel.html">
+              <a
+                id="sec2-travel-text-tip2"
+                alt="Travel-tips"
+                href="./Pages/travel.html"
+              >
                 <p class="sec2-travel-response2">
                   A timeless maze of canals and dreams. 🚣‍♂️✨ #VenetianSplendor
                 </p>
@@ -202,10 +242,18 @@
                   muted
                 ></video
               ></a>
-              <a id="sec2-travel-title-tip3" alt="Travel-tips" href="./Pages/travel.html">
+              <a
+                id="sec2-travel-title-tip3"
+                alt="Travel-tips"
+                href="./Pages/travel.html"
+              >
                 <h1 class="sec2-travel-response3">Florencia</h1>
               </a>
-              <a id="sec2-travel-text-tip3" alt="Travel-tips" href="./Pages/travel.html">
+              <a
+                id="sec2-travel-text-tip3"
+                alt="Travel-tips"
+                href="./Pages/travel.html"
+              >
                 <p class="sec2-travel-response3">
                   Florence, where art, history, and beauty converge! A city that
                   steals your heart with every cobblestone street and
@@ -276,12 +324,17 @@
           <div class="carousel-inner">
             <div class="carousel-item active">
               <div class="d-flex justify-content-center">
-                <img src="./Assets/Media/Water.webp" alt="Tominé" />
+                <img
+                  src="./Assets/Media/Water.webp"
+                  alt="Tominé"
+                  loading="lazy"
+                />
               </div>
             </div>
             <div class="carousel-item">
               <div class="d-flex justify-content-center">
                 <img
+                  loading="lazy"
                   class="carousel-img"
                   src="./Assets/Media/Rest.webp"
                   alt="Bogotá"
@@ -290,12 +343,17 @@
             </div>
             <div class="carousel-item">
               <div class="d-flex justify-content-center">
-                <img src="./Assets/Media/People.webp" alt="Bogotá" />
+                <img
+                  src="./Assets/Media/People.webp"
+                  alt="Bogotá"
+                  loading="lazy"
+                />
               </div>
             </div>
             <div class="carousel-item">
               <div class="d-flex justify-content-center">
                 <img
+                  loading="lazy"
                   class="carousel-img"
                   src="./Assets/Media/monument.webp"
                   alt="Bogotá"
@@ -304,17 +362,26 @@
             </div>
             <div class="carousel-item">
               <div class="d-flex justify-content-center">
-                <img src="./Assets/Media/Mer.webp" alt="Bogotá" />
-              </div>
-            </div>
-            <div class="carousel-item">
-              <div class="d-flex justify-content-center">
-                <img src="./Assets/Media/graffiti.webp" alt="Bogotá" />
+                <img
+                  src="./Assets/Media/Mer.webp"
+                  alt="Bogotá"
+                  loading="lazy"
+                />
               </div>
             </div>
             <div class="carousel-item">
               <div class="d-flex justify-content-center">
                 <img
+                  src="./Assets/Media/graffiti.webp"
+                  alt="Bogotá"
+                  loading="lazy"
+                />
+              </div>
+            </div>
+            <div class="carousel-item">
+              <div class="d-flex justify-content-center">
+                <img
+                  loading="lazy"
                   class="carousel-img"
                   src="./Assets/Media/fade.webp"
                   alt="Bogotá"
@@ -353,7 +420,11 @@
           <div class="row">
             <div class="col-md-12">
               <div class="sectioner-header text-center">
-                <h2><a alt="Contact-me" href="./Pages/contact.html">Ask Me Anything!</a></h2>
+                <h2>
+                  <a alt="Contact-me" href="./Pages/contact.html"
+                    >Ask Me Anything!</a
+                  >
+                </h2>
                 <span class="line"></span>
                 <p>
                   Feel free to ask my any question about my travels, blog or if
@@ -414,6 +485,7 @@
                         >
                           <span>Submit</span
                           ><img
+                            loading="lazy"
                             src="https://i.cloudup.com/2ZAX3hVsBE-3000x3000.png"
                             height="32"
                             width="32"
@@ -475,6 +547,7 @@
         <div class="row justify-content-center">
           <div class="col-3 col-sm-3 col-md-3 col-lg-3">
             <img
+              loading="lazy"
               class="align-self-center"
               src="./Assets/Media/MercyFooter.webp"
               alt="Traveler Logo"
