--- a/Pages/About.html
+++ b/Pages/About.html
@@ -50,6 +50,7 @@
         <div class="container-fluid">
           <a class="navbar-brand" alt="Landing-Page" href="../index.html">
             <img
+            loading="lazy"
               style="height: 50px"
               src="../Assets/Media/MerLogoB.webp"
               alt="logo"
@@ -93,7 +94,7 @@
     <main class="body">
       <section class="about-section" id="hero">
         <div>
-          <img src="../Assets/Media/Mercy.webp" alt="Mercy's-Memoji" class="profile-img" />
+          <img loading="lazy" src="../Assets/Media/Mercy.webp" alt="Mercy's-Memoji" class="profile-img" />
           <h1>I'm Mo.</h1>
           <p class="pb-3">
             Meet Mo, your friendly globetrotting companion, and join her on an exciting journey around the world. Mo is not just any traveler; she's a storyteller, adventurer, and explorer rolled into one. In this captivating adventure, Mo will take you on a voyage filled with intriguing tales, breathtaking landscapes, and cultural encounters that will leave you inspired and yearning for your own adventures.
@@ -138,6 +139,7 @@
         <div class="row justify-content-center">
           <div class="col-3 col-sm-3 col-md-3 col-lg-3">
             <img
+            loading="lazy"
               class="align-self-center"
               src="../Assets/Media/MercyFooter.webp"
               alt=""
