results responsive update

--- a/Pages/About.html
+++ b/Pages/About.html
@@ -114,7 +114,7 @@
               <p class="about-label">Cities Visited</p>
             </div>
             <div class="section-inner2">
-              <p class="about-data">80,000+</p>
+              <p class="about-data">80K +</p>
               <p class="about-label">Photos Taken</p>
             </div>
             <div class="section-inner2">
